Adjust padding (issue on mobile)

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
 }
 
 a {
-    padding: 1em;
+    padding: 0.5em;
 }
 
 #navBar{
